<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antrobot_ros</name>
  <version>2.0.0</version>
  <description>This package provides ROS2 nodes and interfaces to control the Antrobot.</description>
  <maintainer email="dan_marius.novischi@upb.ro">Dan Novischi</maintainer>
  <license>LGPL-3.0-only</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>rclpy</exec_depend> 
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>rdrive</exec_depend>  -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
