<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antrobot_ros</name>
  <version>2.0.0</version>
  <description>This package provides ROS2 nodes and interfaces to control the Antrobot.</description>
  <maintainer email="dan_marius.novischi@upb.ro">Dan Novischi</maintainer>
  <license>LGPL-3.0-only</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>python3-smbus2</depend>
  <depend>rclpy</depend> 
  <depend>launch</depend>  
  <depend>ros2launch</depend>
  <depend>geometry_msgs</depend>
  <depend>rplidar_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>xterm</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
